<resources>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_dailyoffer">Daily Offers</string>
    <string name="title_orders">Orders</string>
    <string name="title_restaurants">Restaurants</string>
    <string name="title_delivery_requests">Delivery Requests</string>
    <string name="title_hour_analytics">Statistics</string>
    <string name="title_review_analytics">Reviews</string>
    <string name="title_activity_location_map">Map</string>
    <string name="sign_out_menu">Sign Out</string>
    <string name="time" translatable="false">--:--</string>
    <string name="delivery_time_card">Delivery Time</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="order_state">Order State</string>
    <string name="order_number">Order Number</string>
    <string name="total_items">Total Items</string>
    <string name="order_rate">Your Opinion</string>
    <string name="title_activity_order_details">Order Details</string>
    <string name="deliveryman_name">Rider Name</string>
    <string name="deliveryman_phone">Rider Phone</string>
    <string name="deliveryman_id">Rider ID</string>
    <string name="distance">Distance (Km)</string>
    <string name="icon_restaurateur" translatable="false">Icon Restaurateur</string>
    <string name="icon_content" translatable="false">Icon Content</string>
    <string name="icon_history" translatable="false">Icon History</string>
    <string name="icon_rider" translatable="false">Icon Rider</string>
    <string name="icon_restaurant" translatable="false">Icon Restaurant</string>
    <string name="name_label">Name</string>
    <string name="phone_label">Phone</string>
    <string name="phone_hint">Your Phone</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="order_content">Order Content</string>
    <string name="order_info">Order Info</string>
    <string name="order_history">State History</string>
    <string name="button_history">Next State</string>
    <string name="confirm_next_state_title">Do you want to confirm the next state?</string>
    <string name="confirm_next_state_message">Is the meal ready for the next state? This is not a reversible operation.</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">CANCEL</string>
    <string name="title_activity_confirm_order">Confirm Order</string>
    <string name="total">Total</string>
    <string name="hint_money">100€</string>
    <string name="hint_date">Insert Delivery Date</string>
    <string name="hint_time">Insert Delivery Time</string>
    <string name="hint_order_info">Insert Order Info</string>
    <string name="title_activity_restaurant_profile">Restaurant Profile</string>
    <string name="title_activity_restaurants">Choose Restaurant</string>
    <string name="title_activity_daily_offers">Daily Offers</string>
    <string name="available">Available</string>
    <string name="ordered">Ordered</string>
    <string name="icon_modify" translatable="false">Icon Modify</string>
    <string name="icon_delete" translatable="false">Icon Delete</string>
    <string name="icon_rating" translatable="false">Icon Rating</string>
    <string name="icon_location" translatable="false">Icon Location</string>
    <string name="icon_favorite" translatable="false">Icon Favorite</string>
    <string name="label_food_dummy" translatable="false">Food Name</string>
    <string name="label_quantity_dummy" translatable="false">15</string>
    <string name="label_price_dummy" translatable="false">50€</string>
    <string name="image_food_dummy">Food Picture</string>
    <string name="icon_add_food" translatable="false">Icon Add</string>
    <string name="icon_remove_food" translatable="false">Icon Remove</string>
    <string name="title_activity_edit_food">Offer Details</string>
    <string name="action_settings">Settings</string>
    <string name="label_food_number">Number</string>
    <string name="label_food_name">Name</string>
    <string name="label_food_description">Description</string>
    <string name="label_food_price">Price</string>
    <string name="label_food_available_qty">Available quantity</string>
    <string name="hint_food_name">Insert food name</string>
    <string name="hint_food_description">Insert food description</string>
    <string name="pick_picture_message">Choose how to set your picture</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="save">SAVE</string>
    <string name="warning_title">Warning</string>
    <string name="discard_msg">Do you want to discard changes?</string>
    <string name="delete_msg">Do you want to delete the item?</string>
    <string name="label_closed">Scheduled for:</string>
    <string name="closed_toast">Restaurant currently closed!</string>
    <string name="closed_tomorrow">Tomorrow</string>
    <string name="title_activity_choose_deliveryman">Choose Deliveryman</string>
    <string name="icon_delivery_request" translatable="false">Icon Delivery Request</string>
    <string name="delivery_request_id">Request ID</string>
    <string name="request_history">Request History</string>
    <string name="new_delivery_request">NEW DELIVERY REQUEST</string>
    <string name="button_map">Open Map</string>
    <string name="button_google_map">Go to Google Maps</string>
    <string name="kilometers_num_dummy" translatable="false">1500/2000</string>
    <string name="label_delivered_total">delivered / total</string>
    <string name="label_total">total</string>
    <string name="label_assigned">assigned</string>
    <string name="label_accepted">accepted</string>
    <string name="label_delivered">delivered</string>
    <string name="kilometers_achieved">Kilometers achieved</string>
    <string name="kilometers_remaining">Kilometers remaining</string>
    <string name="kilometers_attendence">Kilometers in attendance</string>
    <string name="number_requests">Number of requests</string>
    <string name="icon_person" translatable="false">Icon Person</string>
    <string name="icon_phone" translatable="false">Phone Icon</string>
    <string name="icon_mail" translatable="false">Email Icon</string>
    <string name="icon_password" translatable="false">Password Icon</string>
    <string name="icon_delivery" translatable="false">Delivery Icon</string>
    <string name="icon_address" translatable="false">Address Icon</string>
    <string name="icon_city" translatable="false">City Icon</string>
    <string name="icon_birthday" translatable="false">Birthday Icon</string>
    <string name="icon_restaurant_type" translatable="false">Restaurant Type Icon</string>
    <string name="icon_free_day" translatable="false">Free Day Icon</string>
    <string name="icon_working_time" translatable="false">Working Time Icon</string>
    <string name="icon_bio" translatable="false">Description Icon</string>
    <string name="icon_customer" translatable="false">Icon Customer</string>
    <string name="icon_rate" translatable="false">Icon Rate</string>
    <string name="info">Info</string>
    <string name="name_restaurant">Restaurant Name</string>
    <string name="name_customer">Customer Name</string>
    <string name="name_deliveryman">Deliveryman Name</string>
    <string name="phone_restaurant">Restaurant Phone</string>
    <string name="phone_customer">Customer Phone</string>
    <string name="phone_deliveryman">Deliveryman Phone</string>
    <string name="mail">Email</string>
    <string name="password">Password</string>
    <string name="city">City</string>
    <string name="birthday">Birthday</string>
    <string name="bio">Short Description</string>
    <string name="address">Address</string>
    <string name="address_restaurant">Restaurant Address</string>
    <string name="address_delivery">Delivery Address</string>
    <string name="required" translatable="false">*</string>
    <string name="restaurant_type">Restaurant Type</string>
    <string name="free_day">Free Day</string>
    <string name="working_time">Working Time</string>
    <string name="working_time_opening">Opening Time</string>
    <string name="working_time_closing">Closing Time</string>
    <string name="hint_name">"Your name"</string>
    <string name="hint_mail">"Your email address"</string>
    <string name="hint_password">"Your password"</string>
    <string name="hint_city">"Your city"</string>
    <string name="hint_birthday">"Your birthday"</string>
    <string name="hint_bio">"Your description"</string>
    <string name="hint_address">"Your address"</string>
    <string name="hint_phone">"Your phone"</string>
    <string name="hint_restaurant_type">Restaurant type</string>
    <string name="hint_free_day">Free Day</string>
    <string name="hint_working_time" translatable="false">--:--</string>
    <string name="image_background">Background Picture</string>
    <string name="image_profile_photo">Profile photo</string>
    <string name="logout">Logout</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="required_text">*Required</string>
    <string-array name="restaurant_types">
        <item>Favourites</item>
        <item>Pizza</item>
        <item>Hamburger</item>
        <item>Chicken</item>
        <item>Vegan</item>
        <item>Ice cream</item>
        <item>Dessert</item>
        <item>Healthy</item>
        <item>Japanese</item>
        <item>Mexican</item>
    </string-array>
    <string-array name="days_of_week">
        <item>None</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="most_popular_hour">Most Popular Timing:</string>
    <string name="time_dummy" translatable="false">00:00/00:00</string>
    <string name="number_orders">Num Orders</string>
    <string name="label_score_summary">Score Summary:</string>
    <string name="label_restaurant_score">Restaurant Score</string>
    <string name="label_service_score">Service Score</string>
    <string name="label_num_comments">Number of Comments:</string>
    <string name="label_comment">Comment</string>
    <string name="label_no_comment">No comment available</string>
    <string name="gallery_not_found">Gallery app not found!</string>
    <string name="camera_not_found">Camera app not found!</string>
    <string name="name_not_valid">Name must be alphanumeric and not empty</string>
    <string name="mail_not_valid">Email address is not valid</string>
    <string name="phone_not_valid">Phone number is not valid</string>
    <string name="fill_required_fields">ATTENTION: Fill in CORRECTLY all required fields!</string>
    <string name="settings_changed">Settings successfully changed!</string>
    <string name="wrong_times">ATTENTION: opening time must precede closing time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="image_profile_change">Change photo</string>
    <string name="sign_in"> Otherwise <u>Sign Up</u>. </string>
    <string name="new_order">NEW ORDER</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="shopping_cart_empty">Shopping cart is empty</string>
    <string name="label_order_id">Order ID</string>
    <string name="restaurant_profile">Restaurant Profile</string>
    <string name="category">CATEGORY</string>
    <string name="restaurant_rate">Restaurant rate</string>
    <string name="service_rate">Service rate</string>
    <string name="food_rate">Food rate</string>
    <string name="comment">Give us a comment</string>
    <string name="comment_hint">Enter a comment</string>
    <string name="btn_rates">SEND FEEDBACK</string>
</resources>