<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateActivity">

    <TextView
        android:id="@+id/label_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/restaurant_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/rb_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/label_restaurant"
        app:layout_constraintTop_toBottomOf="@+id/label_restaurant" />

    <TextView
        android:id="@+id/label_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/service_rate"
        app:layout_constraintStart_toStartOf="@+id/rb_restaurant"
        app:layout_constraintTop_toBottomOf="@+id/rb_restaurant" />

    <RatingBar
        android:id="@+id/rb_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/label_service"
        app:layout_constraintTop_toBottomOf="@+id/label_service" />

    <TextView
        android:id="@+id/label_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/food_rate"
        app:layout_constraintStart_toStartOf="@+id/rb_service"
        app:layout_constraintTop_toBottomOf="@+id/rb_service" />

    <RatingBar
        android:id="@+id/rb_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/label_food"
        app:layout_constraintTop_toBottomOf="@+id/label_food" />

    <TextView
        android:id="@+id/label_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/comment"
        app:layout_constraintStart_toStartOf="@+id/rb_food"
        app:layout_constraintTop_toBottomOf="@+id/rb_food" />

    <EditText
        android:id="@+id/input_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/comment_hint"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/label_comment"
        app:layout_constraintTop_toBottomOf="@+id/label_comment"
        android:autofillHints="" tools:targetApi="o"/>

    <Button
        android:id="@+id/btn_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_rates"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_comment"
        app:layout_constraintVertical_bias="0.39"
        android:enabled="false"/>


</android.support.constraint.ConstraintLayout>