<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/if_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/image_food_dummy"
        android:elevation="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView" tools:targetApi="lollipop" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:minHeight="150dp"
        app:cardBackgroundColor="@android:color/background_light"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/if_photo"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="150dp">

            <android.support.constraint.Guideline
                android:id="@+id/guideline_start_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="58dp" />

            <TextView
                android:id="@+id/if_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:autoSizeTextType="uniform"
                android:text="@string/hint_food_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end_card"
                app:layout_constraintStart_toStartOf="@+id/guideline_start_card"
                app:layout_constraintTop_toTopOf="parent" tools:targetApi="o" />

            <TextView
                android:id="@+id/if_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ellipsize="end"
                android:text="@string/hint_food_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end_card"
                app:layout_constraintStart_toStartOf="@+id/if_name"
                app:layout_constraintTop_toBottomOf="@+id/if_name" />

            <TextView
                android:id="@+id/if_label_food_available_qty3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/available"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toBottomOf="@+id/if_available_qty"
                app:layout_constraintEnd_toStartOf="@+id/if_available_qty"
                app:layout_constraintTop_toTopOf="@+id/if_available_qty" />

            <TextView
                android:id="@+id/if_available_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/label_quantity_dummy"
                app:layout_constraintBottom_toBottomOf="@+id/if_ordered_qty"
                app:layout_constraintEnd_toStartOf="@+id/if_ordered_qty"
                app:layout_constraintTop_toTopOf="@+id/if_ordered_qty" />

            <TextView
                android:id="@+id/if_ordered_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_quantity_dummy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end_card" />

            <TextView
                android:id="@+id/if_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/label_food_price"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/if_label_food_available_qty3"
                app:layout_constraintStart_toStartOf="@+id/rb_mean_rate"
                app:layout_constraintTop_toTopOf="@+id/if_label_food_available_qty3" />

            <RatingBar
                android:id="@+id/rb_mean_rate"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                app:layout_constraintBottom_toTopOf="@+id/if_price"
                app:layout_constraintStart_toStartOf="@+id/if_description"
                app:layout_constraintTop_toBottomOf="@+id/if_description" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_end_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="32dp" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/if_add_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/icon_add_food"
        android:elevation="8dp"
        android:minWidth="36dp"
        android:minHeight="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:srcCompat="@drawable/ic_add_circle_yellow_24dp" tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/if_subtract_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/icon_remove_food"
        android:elevation="8dp"
        android:minWidth="36dp"
        android:minHeight="36dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:srcCompat="@drawable/ic_remove_circle_red_24dp" tools:targetApi="lollipop" />
</android.support.constraint.ConstraintLayout>
