<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_order"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardBackgroundColor="@color/colorAvailableDeliveryman"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txt_deliveryman_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deliveryman_id"
            card_view:layout_constraintStart_toStartOf="@+id/label_deliveryman_id"
            card_view:layout_constraintTop_toBottomOf="@+id/label_deliveryman_id" />

        <TextView
            android:id="@+id/txt_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            card_view:layout_constraintStart_toStartOf="@+id/label_distance"
            card_view:layout_constraintTop_toBottomOf="@+id/label_distance" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/deliveryman_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/label_name"
            card_view:layout_constraintTop_toBottomOf="@+id/label_name"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deliveryman_phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            card_view:layout_constraintStart_toStartOf="@+id/label_phone"
            card_view:layout_constraintTop_toBottomOf="@+id/label_phone" />

        <TextView
            android:id="@+id/label_deliveryman_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/deliveryman_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/distance"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/txt_deliveryman_id" />

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/deliveryman_name"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/txt_distance" />

        <TextView
            android:id="@+id/label_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginLeft="132dp"
            android:text="@string/deliveryman_phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            card_view:layout_constraintStart_toEndOf="@+id/label_distance"
            card_view:layout_constraintTop_toTopOf="@+id/label_distance" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>